--- a/addons/web/static/src/views/fields/fields.scss
+++ b/addons/web/static/src/views/fields/fields.scss
@@ -51,8 +51,8 @@
             padding-right: var(--inputbox-inner-padding-end);
         }
         &:is(.o_touch_device *) {
-            padding-top: var(--inputbox-spacing-unit);
-            padding-bottom: var(--inputbox-spacing-unit);
+            padding-top: var(--inputbox-overlay-padding-y);
+            padding-bottom: var(--inputbox-overlay-padding-y);
         }
     }
 }
